--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nested-autocompleteintegro",
+  "name": "nested-autocomplete",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   }
 }
